<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D7AFF">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptsettings"
        android:id="@+id/textView1"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#fff"
        android:layout_marginTop="4dp"
    />

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="#fff"
        android:id="@+id/view"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="12dp"
    />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/view">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ptport"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
        />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:id="@+id/ptPort"
            android:enabled="false"
         />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ptuser"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:id="@+id/ptUser"
            android:enabled="false"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ptpass"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:id="@+id/ptPass"
            android:enabled="false"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:background="#fff"
            android:textColor="#4D7AFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:background="@null"
            android:textColor="#fff"
            android:textSize="14sp"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:background="@null"
            android:textColor="#fff"
            android:textSize="14sp"
            />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>